# CST8152_Compiler

A12Make/: CMakeLists.txt  Compilers.c  Compilers.h  INPUT1_Hello.juju  INPUT3_Factorial.juju  INPUT4_Datatypes.juju  INPUT5_General.juju  INPUT9_Big.juju  MainParser.c  MainReader.c  MainScanner.c  Parser.c  Parser.h  Reader.c  Reader.h  Scanner.c  Scanner.h
